<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <group android:checkableBehavior="single">
    <item
        android:id="@+id/drawer_users"
        android:checked="false"
        android:icon="@drawable/ic_users"
        android:title="@string/users"/>

    <item
        android:id="@+id/drawer_find_user"
        android:checked="false"
        android:icon="@drawable/ic_search"
        android:title="@string/find_user"/>

    <item
        android:id="@+id/drawer_mock_user"
        android:checked="false"
        android:icon="@drawable/ic_user"
        android:title="@string/mock_add_user"/>

  </group>
</menu>